# Engram

./: .editorconfig  .gitignore  .mcp.json  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/workflows/: release.yml
docs/: PUBLISHING.md  architecture.md  design-auto-init.md  design-memory-extraction.md  design-semantic-search.md  review.md
scripts/: build_dist.py  install_artifact.sh  install_release.sh  render_homebrew_formula.py
src/codemem/: __main__.py  claude.py  cli.py  config.py  db.py  doctor.py  mcp.py  models.py  project.py  query.py  repoindex.py  rules.py  summary.py
src/engram/: __main__.py  claude.py  cli.py  config.py  db.py  doctor.py  errors.py  mcp.py  models.py  project.py  query.py  repoindex.py  rules.py  summary.py
tests/: test_claude.py  test_cli.py  test_db.py  test_doctor.py  test_mcp.py  test_query.py
