[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codemem"
version = "0.1.0"
description = "Local-first coding memory for repo-scoped rules, archive import, and distilled project context."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
codemem = "codemem.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
